--- a/Practical/Practical-12.html
+++ b/Practical/Practical-12.html
@@ -16,7 +16,7 @@
             background-color: lightgrey;
         }
         #container{
-            width: 98vw;
+            width: 95vw;
             margin: 20px auto;
             background-color: #fff;
             padding:10px;
@@ -26,6 +26,7 @@
             width: 100%;
             margin: 0 auto;
             border-collapse: collapse;
+            font-size: 1.2vw;
         }
         .basic{
             background-color:#c1dcb7;
@@ -48,16 +49,16 @@
         }
         th{
             height: 85px;
-            font-size: 30px;
+            font-size: 2vw;
             color: darkslateblue;
         }
         img{
-            height: 17px;
-            width: 17px;
+            height: 1.1vw;
+            width: 1.1vw;
         }
         tr:nth-child(2){
             color: green;
-            font-size: 22px;
+            font-size: 1.4vw;
         }
         tr:nth-child(even){
             background-color: #edf3e2;
@@ -67,7 +68,7 @@
             text-decoration: none;
             background-color:darkslateblue;
             padding:15px 25px;
-            font-size: 20px;
+            font-size: 1.3vw;
             border-radius: 8px;
             line-height: 50px;
         }
