--- a/Practical/Practical-12.html
+++ b/Practical/Practical-12.html
@@ -16,17 +16,17 @@
             background-color: lightgrey;
         }
         #container{
-            width: 95vw;
+            width: 98vw;
             margin: 20px auto;
             background-color: #fff;
-            padding:10px;
+            padding:8px;
             max-width: 700px;
             }
         table{
             width: 100%;
             margin: 0 auto;
             border-collapse: collapse;
-            font-size: 1.2vw;
+            font-size: 1.3vw;
         }
         .basic{
             background-color:#c1dcb7;
@@ -42,14 +42,14 @@
         }
         td,th{
             width: 150px;
-            padding:8px;
+            padding:5.5px;
             text-align: center;
             border-right: 2px solid white;
             border-left: 2px solid white;
         }
         th{
-            height: 85px;
-            font-size: 2vw;
+            height: 7.4vw;
+            font-size: 2.6vw;
             color: darkslateblue;
         }
         img{
@@ -58,7 +58,7 @@
         }
         tr:nth-child(2){
             color: green;
-            font-size: 1.4vw;
+            font-size: 1.8vw;
         }
         tr:nth-child(even){
             background-color: #edf3e2;
@@ -67,10 +67,10 @@
             color: white;
             text-decoration: none;
             background-color:darkslateblue;
-            padding:15px 25px;
+            padding:1.5vw 3vw;
             font-size: 1.3vw;
-            border-radius: 8px;
-            line-height: 50px;
+            border-radius: 1vw;
+            line-height: 5vw;
         }
         a:hover{
             background-color:red;
@@ -81,7 +81,7 @@
             margin-bottom: 10px;
         }
         i{
-            margin-right: 10px;
+            margin-right: 1vw;
         }
     </style>
 </head>
