--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
             h1 {
                 color:seagreen;
             }
+            body{
+                font-size: 1.4vw;
+            }
           </style>
     </head>
     <body>
@@ -49,13 +52,13 @@
             9.Create a Responsive Web Layout with Responsive Navigation Bar. <a href="../FullStack/Practical/Practical-9.html">Practical-9</a>
         </p>
         <p>
-            10.Create a Responsive Side-Bar Navigation Menu. <a href="./Practical/Practical-10.html">Practical-10</a>
+            10.Create a Responsive Side-Bar Navigation Menu. <a href="../FullStack/Practical/Practical-10.html">Practical-10</a>
         </p>
         <p>
-            11.Create a Table that represent Live Practical Book Records. <a href="./Practical/Practical-11.html">Practical-11</a>
+            11.Create a Table that represent Live Practical Book Records. <a href="../FullStack/Practical/Practical-11.html">Practical-11</a>
         </p>
         <p>
-            12.Create a Custom Price Table Template. <a href="./Practical/Practical-12.html">Practical-12</a>
+            12.Create a Custom Price Table Template. <a href="../FullStack/Practical/Practical-12.html">Practical-12</a>
         </p>
     </body>
 </html>
