--- a/Practical/Practical-12.html
+++ b/Practical/Practical-12.html
@@ -42,7 +42,7 @@
         }
         td,th{
             width: 150px;
-            padding:5.5px;
+            padding:5.8px;
             text-align: center;
             border-right: 2px solid white;
             border-left: 2px solid white;
@@ -79,6 +79,7 @@
             text-align: center;
             text-transform: uppercase;
             margin-bottom: 10px;
+            font-size: 2.4vw;
         }
         i{
             margin-right: 1vw;
