--- a/index.html
+++ b/index.html
@@ -2,23 +2,59 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>HOME</title>
+        <script src="https://kit.fontawesome.com/f744d94acf.js" crossorigin="anonymous"></script>        <title>HOME</title>
         <base href="https://ayushgoyal-cs.github.io">
         <style>
-            h3 {
+            *{
+                font-family: 'Courier New', Courier, monospace;
+            }
+            h2 {
               color:red;
+              text-align: center;
             }
             h1 {
                 color:seagreen;
+                text-align: center;
             }
             body{
+                font-size: 1.1vw;
+                padding: 20px;
+                background-image: linear-gradient(to right, #a1c4fd 0%, #c2e9fb 100%);
+            }
+            p{
+                font-weight: bold;
+                text-align: justify;
+                line-height: 2vw;
+            }
+            a{
+                text-decoration: none;
+                color: #0a3d62;
+                font-weight: bolder;
                 font-size: 1.4vw;
+            }
+            a:hover{
+                color: #686de0;
+            }
+            a::before{
+                content: "\f101";
+                font-family: "FontAwesome";
+                color: #0a3d62;
+                margin-right: 4px;
+            }
+            a::after{
+                content: "\f100";
+                font-family: "FontAwesome";
+                color: #0a3d62;
+                margin-left: 4px;
+            }
+            i{
+                margin-right: 8px;
             }
           </style>
     </head>
     <body>
-        <h1><b>Welcome to Fullstack Course</b></h1>
-        <h3>About Course</h3>
+        <h1><b><i class="fas fa-laptop-code"></i>Welcome to Fullstack Course</b></h1>
+        <h2>About Course</h2>
         <p>
             Front-end web development is everything involved in programming the user interface of a web application.Typically it refers to
             the Hypertext Markup Language(HTML), Cascading style Sheets(CSS) and JavaScript portion of web site production as opposed to the
@@ -27,38 +63,40 @@
         </p>
         <h1><b>List of Practicals</b></h1>
         <p>
-            1.Create a Web Page including HTML basic skeleton using offline HTML Editor and Online Sandbox Environment. <a href="\FullStack\Practical\Practical-1.html">Practical-1</a>
+            1. Create a Web Page including HTML basic skeleton using offline HTML Editor and Online Sandbox Environment. <a href="\FullStack\Practical\Practical-1.html">Practical-1</a>
         </p>
         <p>
-            2.Live your First Web-Page on Git-Hub. <a href="\FullStack\Practical\Practical-2.html">Practical-2</a>
+            2. Live your First Web-Page on Git-Hub. <a href="\FullStack\Practical\Practical-2.html">Practical-2</a>
         </p>
         <p>
-            3.Create a Web-Page showing a basic HTML structure using character Entities and span tag. <a href="\FullStack\Practical\Practical-3.html">Practical-3</a>
-        </p>
-        4.Create a website having list of all practicals and their individual practical page links. <a href="\FullStack\Practical\Practical-4.html">Practical-4</a>
-        <p>
-        5.Create a Web-Page showing the use of Image-Map in the Web Application. <a href="\FullStack\Practical\Practical-5.html">Practical-5</a>
+            3. Create a Web-Page showing a basic HTML structure using character Entities and span tag. <a href="\FullStack\Practical\Practical-3.html">Practical-3</a>
         </p>
         <p>
-            6.Create following LAYOUT using CSS LAYOUT Properties. <a href="\FullStack\Practical\Practical-6.html">Practical-6</a>
+            4. Create a website having list of all practicals and their individual practical page links. <a href="\FullStack\Practical\Practical-4.html">Practical-4</a>
+        </p>
+        <p>
+            5. Create a Web-Page showing the use of Image-Map in the Web Application. <a href="\FullStack\Practical\Practical-5.html">Practical-5</a>
+        </p>
+        <p>
+            6. Create following LAYOUT using CSS LAYOUT Properties. <a href="\FullStack\Practical\Practical-6.html">Practical-6</a>
             </p>
         <p>
-            7.Create a Web Page Layout using div tags. <a href="\FullStack\Practical\Practical-7.html">Practical-7</a>
+            7. Create a Web Page Layout using div tags. <a href="\FullStack\Practical\Practical-7.html">Practical-7</a>
         </p>
         <p>
-            8.Create a Web Page having Fixed Navigation Bar with the given content. <a href="\FullStack\Practical\Practical-8.html">Practical-8</a>
+            8. Create a Web Page having Fixed Navigation Bar with the given content. <a href="\FullStack\Practical\Practical-8.html">Practical-8</a>
         </p>
         <p>
-            9.Create a Responsive Web Layout with Responsive Navigation Bar. <a href="../FullStack/Practical/Practical-9.html">Practical-9</a>
+            9. Create a Responsive Web Layout with Responsive Navigation Bar. <a href="../FullStack/Practical/Practical-9.html">Practical-9</a>
         </p>
         <p>
-            10.Create a Responsive Side-Bar Navigation Menu. <a href="../FullStack/Practical/Practical-10.html">Practical-10</a>
+            10. Create a Responsive Side-Bar Navigation Menu. <a href="../FullStack/Practical/Practical-10.html">Practical-10</a>
         </p>
         <p>
-            11.Create a Table that represent Live Practical Book Records. <a href="../FullStack/Practical/Practical-11.html">Practical-11</a>
+            11. Create a Table that represent Live Practical Book Records. <a href="../FullStack/Practical/Practical-11.html">Practical-11</a>
         </p>
         <p>
-            12.Create a Custom Price Table Template. <a href="../FullStack/Practical/Practical-12.html">Practical-12</a>
+            12. Create a Custom Price Table Template. <a href="../FullStack/Practical/Practical-12.html">Practical-12</a>
         </p>
     </body>
 </html>
