--- a/index.html
+++ b/index.html
@@ -98,5 +98,8 @@
         <p>
             12. Create a Custom Price Table Template. <a href="../FullStack/Practical/Practical-12.html">Practical-12</a>
         </p>
+        <p>
+            13. Create a Responsive Footer Template. <a href="../FullStack/Practical/Practical-13.html">Practical-13</a>
+        </p>
     </body>
 </html>
