--- a/Practical/Practical-14.html
+++ b/Practical/Practical-14.html
@@ -1,11 +1,229 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <title>Practical-14</title>
-</head>
-<body>
-    
-</body>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: Arial, Helvetica, sans-serif;
+      }
+      body{
+        background-color: lightgray;
+      }
+      .form1 {
+        background: linear-gradient(to left,red,orange);
+        margin: 100px;
+      }
+      input[type='email'] {
+        width: 100%;
+        border: 0;
+        border-bottom: 1px solid;
+        padding-bottom: 10px;
+        padding-top: 25px;
+      }
+      input[type='password'] {
+        width: 100%;
+        border: 0;
+        border-bottom: 1px solid;
+        padding-bottom: 10px;
+        padding-top: 25px;
+      }
+      .form1 input[type='submit'] {
+        border: 0;
+        color: white;
+        font-size: 10px;
+        background-color:grey;
+        padding: 8px 16px;
+        border-radius: 30px;
+      }
+      form {
+        padding: 30px;
+        background-color: #fff;
+      }
+      .form1 h4{
+        padding-top: 10px;
+        padding-bottom: 15px;
+        color: #fff;
+        text-align: center;
+      }
+      .form1 a{
+        text-decoration: none;
+        color: black;
+      }
+      .form1 i{
+        padding: 5px;
+        padding-bottom: 20px;
+        color: #fff;
+      }
+      .form1 p{
+        font-size: 10px;
+        color: gray;
+        padding: 20px 0px;
+        text-align: right;
+      }
+      .form1 p#p2{
+        display: inline-block;
+        margin-left: 140px;
+        color: black;
+      }
+      .form2 {
+        background-color: grey;
+        margin: 100px;
+      }
+      .form2 h4{
+        padding-bottom: 15px;
+        color: darkred;
+        text-align: center;
+      }
+      .form2 a{
+        text-decoration: none;
+        color: black;
+      }
+      .form2 i{
+        padding: 20px 5px;
+        padding-bottom: 20px;
+        color: #fff;
+      }
+      .form2 p{
+        font-size: 10px;
+        color: gray;
+      }
+      .form2 p#p1{
+        display: inline;
+      }
+      .form2 p#p2{
+        display: inline-block;
+        margin-left: 120px;
+        color: black;
+      }
+      .form2 input[type='submit'] {
+        border: 0;
+        color: white;
+        font-size: 10px;
+        background-color:DARKRED;
+        padding: 10px 35px;
+        border-radius: 30px;
+      }
+      .social{
+        text-align: center;
+      }
+      .form2 input[type='checkbox']{
+        margin-top: 20px;
+        margin-right: 10px;
+        margin-bottom: 20px;
+      }
+      .form2 p b{
+        color: #3498db;
+      }
+      .form3 {
+        background-color: white;
+        margin: 100px;
+      }
+      .form3 h4{
+        padding-bottom: 15px;
+        color: black;
+        text-align: center;
+      }
+      .form3 a{
+        text-decoration: none;
+        color: black;
+      }
+      .form3 i{
+        margin-top: 0px;
+        padding: 0px 30px;
+        padding-bottom: 20px;
+        color: #3498db;
+        width: 70px;
+        border-radius: 20px;
+        text-align: center;
+        padding-top: 20px;
+        box-shadow: 2px 2px 5px #3498db;
+      }
+      .form3 p{
+        font-size: 10px;
+        color: gray;
+      }
+      .form3 input[type='submit'] {
+        border: 0;
+        color: white;
+        font-size: 10px;
+        background-color:DARKRED;
+        padding: 10px 35px;
+        border-radius: 30px;
+        width: 100%;
+      }
+      .form3 p a{
+        color: #3498db;
+      }
+      .form3 p{
+        font-size: 10px;
+        color: gray;
+        padding: 20px 0px;
+        text-align: right;
+      }
+      .form3 p:nth-child(6){
+        text-align: center;
+        font-size: 14px;
+      }
+      
+      .social{
+        text-align: center;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="main-container">
+    <div class="form1">
+      <h4>Log in</h4>
+      <div class="social">
+      <a href="#"><i class="fa fa-facebook"></i></a>
+      <a href="#"><i class="fa fa-instagram"></i></a>
+      <a href="#"><i class="fa fa-twitter"></i></a>
+      </div>
+      <form>
+        <input type="email" placeholder="Your email" name="email" required />
+        <input type="password" placeholder="Your password" name="pwd" required />
+        <p><a class="forgot" href="#">Forgot <b>password?</b></a></p>
+        <input type="submit" value="LOGIN"/>
+        <p id="p2">Dont't have an account? <b>Sign Up</b></p>
+      </form>
+    </div>
+    <div class="form2">
+      <form>
+        <h4>Sign up</h4>
+        <input type="email" placeholder="Your email" name="email" required >
+        <input type="password" placeholder="Your password" name="pwd" required >
+        <input type="checkbox" name="chk" id="chk">
+        <p id="p1">Accept the <b>Terms and Conditions</b></p><br>
+        <input type="submit" value="SIGN UP">
+        <p id="p2">Have an account? <b>Log in</b></p>
+      </form>
+      <div class="social">
+      <a href="#"><i class="fa fa-facebook"></i></a>
+      <a href="#"><i class="fa fa-instagram"></i></a>
+      <a href="#"><i class="fa fa-twitter"></i></a>
+      </div>
+    </div>
+    <div class="form3">
+      <form>
+        <h4>Sign in</h4>
+        <input type="email" placeholder="Your email" name="email" required >
+        <input type="password" placeholder="Your password" name="pwd" required >
+        <p><a class="forgot" href="#">Forgot password?</a></p>
+        <input type="submit" value="SIGN UP">
+        <p>or Sign in with</p>
+      </form>
+      <div class="social">
+      <a href="#"><i class="fa fa-facebook"></i></a>
+      <a href="#"><i class="fa fa-instagram"></i></a>
+      <a href="#"><i class="fa fa-twitter"></i></a>
+      </div>
+    </div>
+    </div>
+  </body>
 </html>
