--- a/Practical/Practical-14.html
+++ b/Practical/Practical-14.html
@@ -87,6 +87,7 @@
         padding: 10px 25px;
         border-radius: 30px;
         outline: none;
+        cursor: pointer;
       }
       .form1 p#p2 {
         display: inline-block;
@@ -128,6 +129,7 @@
         padding: 10px 35px;
         border-radius: 30px;
         outline: none;
+        cursor: pointer;
       }
       .form2 p#p3 {
         display: inline-block;
@@ -192,6 +194,7 @@
         width: 100%;
         background: linear-gradient(to right,#3498db,#034670);
         outline: none;
+        cursor: pointer;
       }
       .form3 a {
         text-decoration: none;
@@ -225,8 +228,8 @@
         <h4>Log in</h4>
         <div class="social">
           <a href="#"><i class="fa fa-facebook"></i></a>
-          <a href="#"><i class="fa fa-instagram"></i></a>
           <a href="#"><i class="fa fa-twitter"></i></a>
+          <a href="#"><i class="fa fa-google-plus"></i></a>
         </div>
         <form>
           <input type="email" placeholder="Your email" name="email" required />
@@ -240,7 +243,7 @@
             <a class="forgot" href="#">Forgot <b>password?</b></a>
           </p>
           <input type="submit" value="LOGIN" />
-          <p id="p2">Dont't have an account? <b>Sign Up</b></p>
+          <p id="p2">Dont't have an account?<a href="#"><b>Sign Up</b></a></p>
         </form>
       </div>
       <div class="form2">
@@ -257,12 +260,12 @@
           <p id="p1">Accept the <b>Terms and Conditions</b></p>
           <br />
           <input type="submit" value="SIGN UP" />
-          <p id="p3">Have an account? <b>Log in</b></p>
+          <p id="p3">Have an account? <a href="#"><b>Log in</b></a></p>
         </form>
         <div class="social">
           <a href="#"><i class="fa fa-facebook"></i></a>
-          <a href="#"><i class="fa fa-instagram"></i></a>
           <a href="#"><i class="fa fa-twitter"></i></a>
+          <a href="#"><i class="fa fa-google-plus"></i></a>
         </div>
       </div>
       <div class="form3">
@@ -275,14 +278,14 @@
             name="pwd"
             required
           />
-          <p><a class="forgot" href="#">Forgot password?</a></p>
+          <p><a href="#">Forgot password?</a></p>
           <input type="submit" value="SIGN UP" />
           <p id="p4">or Sign in with</p>
         </form>
         <div class="social">
           <a href="#"><i class="fa fa-facebook"></i></a>
-          <a href="#"><i class="fa fa-instagram"></i></a>
           <a href="#"><i class="fa fa-twitter"></i></a>
+          <a href="#"><i class="fa fa-google-plus"></i></a>
         </div>
       </div>
     </div>
