--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="https://kit.fontawesome.com/f744d94acf.js" crossorigin="anonymous"></script>        <title>HOME</title>
-        <base href="https://ayushgoyal-cs.github.io">
+        <link rel="icon" href="../FullStack/images/favicon.ico" type="ico" sizes="16x16">
         <style>
             *{
                 font-family: 'Courier New', Courier, monospace;
@@ -63,28 +63,28 @@
         </p>
         <h1><b>List of Practicals</b></h1>
         <p>
-            1. Create a Web Page including HTML basic skeleton using offline HTML Editor and Online Sandbox Environment. <a href="\FullStack\Practical\Practical-1.html">Practical-1</a>
+            1. Create a Web Page including HTML basic skeleton using offline HTML Editor and Online Sandbox Environment. <a href="../FullStack/Practical/Practical-1.html">Practical-1</a>
         </p>
         <p>
-            2. Live your First Web-Page on Git-Hub. <a href="\FullStack\Practical\Practical-2.html">Practical-2</a>
+            2. Live your First Web-Page on Git-Hub. <a href="../FullStack/Practical/Practical-2.html">Practical-2</a>
         </p>
         <p>
-            3. Create a Web-Page showing a basic HTML structure using character Entities and span tag. <a href="\FullStack\Practical\Practical-3.html">Practical-3</a>
+            3. Create a Web-Page showing a basic HTML structure using character Entities and span tag. <a href="../FullStack/Practical/Practical-3.html">Practical-3</a>
         </p>
         <p>
-            4. Create a website having list of all practicals and their individual practical page links. <a href="\FullStack\Practical\Practical-4.html">Practical-4</a>
+            4. Create a website having list of all practicals and their individual practical page links. <a href="../FullStack/Practical/Practical-4.html">Practical-4</a>
         </p>
         <p>
             5. Create a Web-Page showing the use of Image-Map in the Web Application. <a href="\FullStack\Practical\Practical-5.html">Practical-5</a>
         </p>
         <p>
-            6. Create following LAYOUT using CSS LAYOUT Properties. <a href="\FullStack\Practical\Practical-6.html">Practical-6</a>
+            6. Create following LAYOUT using CSS LAYOUT Properties. <a href="../FullStack/Practical/Practical-6.html">Practical-6</a>
             </p>
         <p>
-            7. Create a Web Page Layout using div tags. <a href="\FullStack\Practical\Practical-7.html">Practical-7</a>
+            7. Create a Web Page Layout using div tags. <a href="../FullStack/Practical/Practical-7.html">Practical-7</a>
         </p>
         <p>
-            8. Create a Web Page having Fixed Navigation Bar with the given content. <a href="\FullStack\Practical\Practical-8.html">Practical-8</a>
+            8. Create a Web Page having Fixed Navigation Bar with the given content. <a href="../FullStack/Practical/Practical-8.html">Practical-8</a>
         </p>
         <p>
             9. Create a Responsive Web Layout with Responsive Navigation Bar. <a href="../FullStack/Practical/Practical-9.html">Practical-9</a>
