--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="https://kit.fontawesome.com/f744d94acf.js" crossorigin="anonymous"></script>        <title>HOME</title>
-        <link rel="icon" href="../FullStack/images/favicon.ico" type="ico" sizes="16x16">
+        <link rel="icon" href="favicon.ico" type="ico" sizes="16x16">
         <style>
             *{
                 font-family: 'Courier New', Courier, monospace;
