--- a/Practical/Practical-15.html
+++ b/Practical/Practical-15.html
@@ -3,9 +3,105 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Practical-15</title>
+    <style>
+        *{
+            padding: 0px;
+            margin: 0px;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        body{
+            background-color: gray;
+        }
+
+        #content h1{
+            color: white;
+            margin-top: 50px;
+            font-size: 70px;
+            display: flex;
+            justify-content: center;
+        }
+
+        #calculator{
+            display: flex;
+            justify-content: center;
+        }
+
+        #minus{
+            width: 50px;
+            height: 50px;
+            background-color: yellow;
+            border: 2px solid black;
+            margin-right: 50px;
+        }
+
+        #output{
+            width: 50px;
+            height: 50px;
+            margin-right: 50px;
+        }
+
+        #output p{
+            font-size: 40px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: yellow;
+        }
+        #minus #btn-minus{
+            font-size: 40px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            background-color: yellow;
+        }
+
+        #plus{
+            width: 50px;
+            height: 50px;
+            background-color: yellow;
+            border: 2px solid black;
+        }
+
+        #plus #btn-plus{
+            font-size: 40px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            background-color: yellow;
+        }
+    </style>
 </head>
 <body>
-    
+    <div id="content">
+        <h1>COUNTER</h1><br><br>
+        <div id="calculator">
+            <div id="minus" onclick="minus()"><button id="btn-minus">-</button></div>
+            <div id="output"><p id="out">0</p></div>
+            <div id="plus" onclick="plus()"><button id="btn-plus">+</button></div>
+        </div>
+        <script>
+            function minus(){
+                var a = document.getElementById("out");
+                if(a.innerHTML <= 0){
+                    document.getElementById("btn-minus").disabled=true;
+                }
+                else{
+                    a.innerHTML = a.innerHTML - 1;
+                }
+            }
+
+            function plus(){
+                var a = document.getElementById("out");
+                if(document.getElementById("btn-minus").disabled){
+                    document.getElementById("btn-minus").disabled=false;
+                }
+                a.innerHTML = parseInt(a.innerHTML) + parseInt("1");
+            }
+        </script>
+    </div>
 </body>
 </html>
