--- a/Practical/Practical-15.html
+++ b/Practical/Practical-15.html
@@ -12,13 +12,13 @@
         }
 
         body{
-            background-color: gray;
+            background-color: darkgray;
         }
 
         #content h1{
             color: white;
             margin-top: 50px;
-            font-size: 70px;
+            font-size: 50px;
             display: flex;
             justify-content: center;
         }
@@ -32,7 +32,8 @@
             width: 50px;
             height: 50px;
             background-color: yellow;
-            border: 2px solid black;
+            border: 3px solid;
+            border-color: rgb(224, 224, 52) rgb(204, 204, 47) rgb(204, 204, 47) rgb(224, 224, 52);
             margin-right: 50px;
         }
 
@@ -55,6 +56,7 @@
             justify-content: center;
             align-items: center;
             width: 100%;
+            border: 0;
             background-color: yellow;
         }
 
@@ -62,7 +64,8 @@
             width: 50px;
             height: 50px;
             background-color: yellow;
-            border: 2px solid black;
+            border: 3px solid;
+            border-color: grey black black grey;
         }
 
         #plus #btn-plus{
@@ -71,6 +74,7 @@
             justify-content: center;
             align-items: center;
             width: 100%;
+            border: 0;
             background-color: yellow;
         }
     </style>
