--- a/index.html
+++ b/index.html
@@ -104,5 +104,8 @@
         <p>
             14. Create Login Form with different Templates. <a href="../FullStack/Practical/Practical-14.html">Practical-14</a>
         </p>
+        <p>
+            15. Create a Counter Page using JavaScript as per the attached Templates. <a href="../FullStack/Practical/Practical-15.html">Practical-15</a>
+        </p>
     </body>
 </html>
