--- a/Practical/Practical-15.html
+++ b/Practical/Practical-15.html
@@ -57,9 +57,10 @@
             align-items: center;
             width: 100%;
             border: 0;
+            outline: none;
             background-color: yellow;
+            color:rgb(177, 177, 60)
         }
-
         #plus{
             width: 50px;
             height: 50px;
@@ -76,6 +77,7 @@
             width: 100%;
             border: 0;
             background-color: yellow;
+            outline: none;
         }
     </style>
 </head>
