--- a/index.html
+++ b/index.html
@@ -107,5 +107,8 @@
         <p>
             15. Create a Counter Page using JavaScript as per the attached Templates. <a href="../FullStack/Practical/Practical-15.html">Practical-15</a>
         </p>
+        <p>
+            16. Create a To-do List using JavaScript. <a href="../FullStack/Practical/Practical-16.html">Practical-16</a>
+        </p>
     </body>
 </html>
