--- a/index.html
+++ b/index.html
@@ -110,5 +110,8 @@
         <p>
             16. Create a To-do List using JavaScript. <a href="../FullStack/Practical/Practical-16.html">Practical-16</a>
         </p>
+        <p>
+            17. Create a Page with Live Clock with Dynamic Greeting Background and Data Stored in Browser Local Storage. <a href="../FullStack/Practical/Practical-17.html">Practical-17</a>
+        </p>
     </body>
 </html>
