--- a/index.html
+++ b/index.html
@@ -113,5 +113,8 @@
         <p>
             17. Create a Page with Live Clock with Dynamic Greeting Background and Data Stored in Browser Local Storage. <a href="../FullStack/Practical/Practical-17.html">Practical-17</a>
         </p>
+        <p>
+            18. Create an HTML Form and Validate it with Javascript (Client-side Programming Language). <a href="../FullStack/Practical/Practical-18.html">Practical-18</a>
+        </p>
     </body>
 </html>
