updating index for practical 19

--- a/index.html
+++ b/index.html
@@ -116,5 +116,8 @@
         <p>
             18. Create an HTML Form and Validate it with Javascript (Client-side Programming Language). <a href="../FullStack/Practical/Practical-18.html">Practical-18</a>
         </p>
+        <p>
+            19. Create an HTML page with Multi-Step Form. <a href="../FullStack/Practical/Practical-19.html">Practical-19</a>
+        </p>
     </body>
 </html>
