--- a/index.html
+++ b/index.html
@@ -119,5 +119,8 @@
         <p>
             19. Create an HTML page with Multi-Step Form. <a href="../FullStack/Practical/Practical-19.html">Practical-19</a>
         </p>
+        <p>
+            20. Create a Responsive Layout using Bootstrap Grid System. <a href="../FullStack/Practical/Practical-20.html">Practical-20</a>
+        </p>
     </body>
 </html>
